--- a/.github/workflows/ubuntu-desktop.yml
+++ b/.github/workflows/ubuntu-desktop.yml
@@ -46,17 +46,18 @@ jobs:
       - name: Install packages
         run: |
           brew install coreutils gnu-sed packer qemu
-          echo "::add-path::/usr/local/bin:/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:${PATH}"
-          echo $PATH
+          date
+          cat "${GITHUB_PATH}"
+          echo "/usr/local/bin:/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin" >> "${GITHUB_PATH}"
+          date
+          cat "${GITHUB_PATH}"
 
       - name: Build image - ${{ matrix.stage }}
         run: |
-          #export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:${PATH}
           echo $PATH
           ./build.sh ${{ matrix.stage }}
 
       - name: Check the created box image - ${{ matrix.stage }}
         if: contains( matrix.stage, 'virtualbox' )
         run: |
-          #export PATH=/usr/local/opt/gnu-sed/libexec/gnubin:/usr/local/opt/coreutils/libexec/gnubin:${PATH}
           ./vagrant_init_destroy_boxes.sh /var/tmp/packer-templates-images/${{ matrix.stage }}.box
