--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -8,5 +8,6 @@ jobs:
       - uses: actions/checkout@v1
       - run: 'echo "field: ${{ github.event.client_payload.foo }}"'
       - run: 'echo "payload: ${{ toJson(github.event.client_payload) }}"'
+      - run: 'echo "payload-whole: ${{ github.event.client_payload }}"'
       - run: echo baz
         if: github.event.action == 'baz'
