--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -6,8 +6,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
-      - run: 'echo "field: ${{ github.event.client_payload.foo }}"'
-      - run: 'echo "payload: ${{ toJson(github.event.client_payload) }}"'
-      - run: 'echo "payload-whole: ${{ github.event.client_payload }}"'
-      - run: echo baz
-        if: github.event.action == 'baz'
+      - run: |
+          echo "field: ${{ github.event.client_payload.foo }}"
+          echo "payload: ${{ toJson(github.event.client_payload) }}"
+          echo ${{ toJson(github.event.client_payload) }} | jq
+          echo "payload-whole: ${{ github.event.client_payload }}"
