--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -5,19 +5,21 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - run: |
+      - name: test
+        run: |
           set -x
           echo "field: ${{ github.event.client_payload.foo }}"
           echo "payload: ${{ toJson(github.event.client_payload) }}"
           echo '{}' | jq
           echo '${{ toJson(github.event.client_payload) }}' | jq
-      - run: |
+      - name: test2
+        run: |
           set -x
           cat << EOF
           ${{ toJson(github.event.client_payload) }}
           EOF
-      - run: |
+      - name: test3
+        run: |
           set -x
           cat << EOF | jq
           ${{ toJson(github.event.client_payload) }}
