--- a/.github/workflows/repository_dispatch.yml
+++ b/.github/workflows/repository_dispatch.yml
@@ -8,9 +8,11 @@ jobs:
       - name: test
         run: |
           set -x
+          brew update
+          brew upgrade jq
+          echo '{}' | jq
           echo "field: ${{ github.event.client_payload.foo }}"
           echo "payload: ${{ toJson(github.event.client_payload) }}"
-          echo '{}' | jq
           echo '${{ toJson(github.event.client_payload) }}' | jq
       - name: test2
         run: |
