--- a/.github/workflows/env-check.yml
+++ b/.github/workflows/env-check.yml
@@ -67,7 +67,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v2
         with:
-          path: '${{ GALAXY_REPOSITORY }}'
+          path: '${{ env.GALAXY_REPOSITORY }}'
 
       - name: zzz
         run: |
