--- a/.github/workflows/build2.yml
+++ b/.github/workflows/build2.yml
@@ -2,9 +2,9 @@ name: build - artifacts
 
 on:
   # push:
-  # repository_dispatch:
-  schedule:
-    - cron: '0 15 1 1 0'
+  repository_dispatch:
+  #schedule:
+  #    - cron: '0 15 1 1 0'
 
 env:
   MYTMP: /tmp
