--- a/.github/workflows/mac-test.yml
+++ b/.github/workflows/mac-test.yml
@@ -1,9 +1,9 @@
 name: mac-test
 
 on:
-  # repository_dispatch:
-  schedule:
-    - cron: '0 15 1 1 0'
+  repository_dispatch:
+  #schedule:
+  #    - cron: '0 15 1 1 0'
   # pull_request:
   #   types: [opened, synchronize]
   #   paths:
