--- a/.github/workflows/vuepress-build-check-deploy.yml
+++ b/.github/workflows/vuepress-build-check-deploy.yml
@@ -56,6 +56,6 @@ jobs:
         env:
           INPUT_URL: https://${{ github.event.repository.owner.name }}.github.io/${{ github.event.repository.name }}
           INPUT_PAGES_PATH: .
-          INPUT_CMD_PARAMS: --buffer-size=8192 --max-connections=10 --skip-tls-verification --exclude=(myexample.dev|mylabs.dev|https://github.com/ruzickap/k8s-flux-repository)
+          INPUT_CMD_PARAMS: --verbose --buffer-size=8192 --max-connections=10 --skip-tls-verification --exclude=(myexample.dev|mylabs.dev|https://github.com/ruzickap/k8s-flux-repository)
         run: |
           echo ${INPUT_URL}
