--- a/.github/workflows/gh-action-test.yml
+++ b/.github/workflows/gh-action-test.yml
@@ -2,9 +2,9 @@ name: gh-action-test
 
 on:
   # push:
-  # repository_dispatch:
-  schedule:
-    - cron: '0 15 1 1 0'
+  repository_dispatch:
+#  schedule:
+#    - cron: '0 15 1 1 0'
 
 jobs:
   gh-action-test:
