--- a/.github/workflows/virt-check.yml
+++ b/.github/workflows/virt-check.yml
@@ -1,18 +1,18 @@
 name: virt-check
 
 on:
-  # repository_dispatch:
-  schedule:
-    - cron: '0 15 1 1 0'
-  # pull_request:
-  #   types: [opened, synchronize]
-  #   paths:
-  #     - .github/workflows/virt-check.yml
-  # push:
-  #   branches:
-  #     - master
-  #   paths:
-  #     - .github/workflows/virt-check.yml
+  repository_dispatch:
+  # schedule:
+  #   - cron: '0 15 1 1 0'
+  pull_request:
+    types: [opened, synchronize]
+    paths:
+      - .github/workflows/virt-check.yml
+  push:
+    branches:
+      - master
+    paths:
+      - .github/workflows/virt-check.yml
 
 jobs:
   virt-check-ubuntu:
@@ -27,7 +27,7 @@ jobs:
 
 
   virt-check-mac:
-    runs-on: macos-latest
+    runs-on: macos-11.0
     steps:
       - name: sysctl
         run: |
