--- a/.github/workflows/virt-check.yml
+++ b/.github/workflows/virt-check.yml
@@ -21,9 +21,11 @@ jobs:
       - name: lspcu
         run: |
           set -x
+          df -h
           lscpu
           egrep -o '(vmx|svm)' /proc/cpuinfo | sort | uniq
           egrep -wo 'vmx|lm|aes' /proc/cpuinfo  | sort | uniq | sed -e 's/aes/Hardware encryption=Yes (&)/g' -e 's/lm/64 bit cpu=Yes (&)/g' -e 's/vmx/Intel hardware virtualization=Yes (&)/g'
+          apt list --installed
 
 
   virt-check-mac:
@@ -32,6 +34,7 @@ jobs:
       - name: sysctl
         run: |
           set -x
+          df -h
           sysctl kern.hv_support
           sysctl -a | grep machdep.cpu.features
           sysctl -a | grep -o VMX
