--- a/.github/workflows/virt-check.yml
+++ b/.github/workflows/virt-check.yml
@@ -26,6 +26,7 @@ jobs:
           egrep -o '(vmx|svm)' /proc/cpuinfo | sort | uniq
           egrep -wo 'vmx|lm|aes' /proc/cpuinfo  | sort | uniq | sed -e 's/aes/Hardware encryption=Yes (&)/g' -e 's/lm/64 bit cpu=Yes (&)/g' -e 's/vmx/Intel hardware virtualization=Yes (&)/g'
           apt list --installed
+          dpkg-query -Wf '${Installed-Size}\t${Package}\n' | sort -n
 
 
   virt-check-mac:
