--- a/.github/workflows/virt-check.yml
+++ b/.github/workflows/virt-check.yml
@@ -55,8 +55,9 @@ jobs:
           brew uninstall openjdk gcc go php gradle gcc@8 gcc@9 azure-cli ant maven selenium-server-standalone
           df -h /
           set +x
-          ( for pkg in `brew list --formula -1 | egrep -v '\.|\.\.'`; do echo $pkg `brew info $pkg | egrep '[0-9]* files, ' | sed 's/^.*[0-9]* files, \(.*\)).*$/\1/' | awk '{print $1;}/[0-9]$/{s+=$1};/[mM][bB]$/{s+=$1*(1024*1024);next};/[kK][bB]$/{s+=$1*1024;next} END { suffix=" KMGT"; for(i=1; s>1024 && i < length(suffix); i++) s/=1024; printf "\t(all versions: %0.1f%s)",s,substr(suffix, i, 1), $3; }'`; done ) | sort -k2
-          echo "********************"
-          brew list --formula | xargs -n1 -P8 -I {} \                                                                                              1m 34s
+          # ( for pkg in `brew list --formula -1 | egrep -v '\.|\.\.'`; do echo $pkg `brew info $pkg | egrep '[0-9]* files, ' | sed 's/^.*[0-9]* files, \(.*\)).*$/\1/' | awk '{print $1;}/[0-9]$/{s+=$1};/[mM][bB]$/{s+=$1*(1024*1024);next};/[kK][bB]$/{s+=$1*1024;next} END { suffix=" KMGT"; for(i=1; s>1024 && i < length(suffix); i++) s/=1024; printf "\t(all versions: %0.1f%s)",s,substr(suffix, i, 1), $3; }'`; done ) | sort -k2
+          # echo "********************"
+          brew install findutils
+          brew list --formula | xargs -n1 -P8 -I {} \
             sh -c "brew info {} | egrep '[0-9]* files, ' | sed 's/^.*[0-9]* files, \(.*\)).*$/{} \1/'" | \
-            sort -h -r -k2 - | column -t | sort -k2
+            sort -h -r -k2 - | column -t | grep MB | sort -k2 -g
