--- a/.github/workflows/virt-check.yml
+++ b/.github/workflows/virt-check.yml
@@ -1,7 +1,7 @@
 name: virt-check
 
 on:
-  repository_dispatch:
+  # repository_dispatch:
   # schedule:
   #   - cron: '0 15 1 1 0'
   pull_request:
@@ -38,6 +38,13 @@ jobs:
           sudo apt-get clean
           rm -rf /usr/share/dotnet/
           df -h
+      - name: accelerator
+        run: |
+          if [[ $(uname) = "Darwin" ]]; then
+            echo "accelerator=hvf"
+          elif [[ $(uname) = "Linux" ]]; then
+            echo "accelerator=kvm"
+          fi
 
 
   virt-check-mac:
@@ -52,12 +59,18 @@ jobs:
           sysctl -a | grep machdep.cpu.features
           sysctl -a | grep -o VMX
           df -h /
-          brew uninstall openjdk gcc go php gradle gcc@8 gcc@9 azure-cli ant maven selenium-server-standalone aspell mongodb-community mongodb-database-tools aws-sam-cli python@3.8 icu4c cmake node@14 helm postgresql
+          brew uninstall ant aws-sam-cli aspell azure-cli cmake gcc gcc@8 gcc@9 go gradle helm icu4c maven mongodb-community mongodb-database-tools node@14 openjdk php postgresql python@3.8 selenium-server-standalone
           df -h /
           set +x
-          # ( for pkg in `brew list --formula -1 | egrep -v '\.|\.\.'`; do echo $pkg `brew info $pkg | egrep '[0-9]* files, ' | sed 's/^.*[0-9]* files, \(.*\)).*$/\1/' | awk '{print $1;}/[0-9]$/{s+=$1};/[mM][bB]$/{s+=$1*(1024*1024);next};/[kK][bB]$/{s+=$1*1024;next} END { suffix=" KMGT"; for(i=1; s>1024 && i < length(suffix); i++) s/=1024; printf "\t(all versions: %0.1f%s)",s,substr(suffix, i, 1), $3; }'`; done ) | sort -k2
-          # echo "********************"
           brew install findutils
           brew list --formula | xargs -n1 -P8 -I {} \
             sh -c "brew info {} | egrep '[0-9]* files, ' | sed 's/^.*[0-9]* files, \(.*\)).*$/{} \1/'" | \
             sort -h -r -k2 - | column -t | grep MB | sort -k2 -g
+
+      - name: accelerator
+        run: |
+          if [[ $(uname) = "Darwin" ]]; then
+            echo "accelerator=hvf"
+          elif [[ $(uname) = "Linux" ]]; then
+            echo "accelerator=kvm"
+          fi
