--- a/.github/workflows/virt-check.yml
+++ b/.github/workflows/virt-check.yml
@@ -46,7 +46,6 @@ jobs:
             echo "accelerator=kvm"
           fi
 
-
   virt-check-mac:
     # runs-on: macos-11.0
     runs-on: macos-latest
@@ -59,7 +58,7 @@ jobs:
           sysctl -a | grep machdep.cpu.features
           sysctl -a | grep -o VMX
           df -h /
-          brew uninstall ant aws-sam-cli aspell azure-cli cmake gcc gcc@8 gcc@9 go gradle helm icu4c maven mongodb-community mongodb-database-tools node@14 openjdk php postgresql python@3.8 selenium-server-standalone
+          brew uninstall ant aws-sam-cli aspell azure-cli cmake gcc gcc@8 gcc@9 gradle helm icu4c maven mongodb-community mongodb-database-tools node@14 openjdk php postgresql python@3.8 selenium-server-standalone
           df -h /
           set +x
           brew install findutils
