--- a/.github/workflows/shellcheck2.yml
+++ b/.github/workflows/shellcheck2.yml
@@ -13,6 +13,6 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Lint check
-        uses: azohra/shell-linter@latest
+        uses: azohra/shell-linter@v0.4.0
         with:
           path: "*.sh"
