--- a/.github/workflows/virt-check.yml
+++ b/.github/workflows/virt-check.yml
@@ -60,9 +60,11 @@ jobs:
           df -h /
           brew uninstall ant aws-sam-cli aspell azure-cli cmake gcc gcc@8 gcc@9 gradle helm icu4c maven mongodb-community mongodb-database-tools node@14 openjdk php postgresql python@3.8 selenium-server-standalone
           df -h /
-          set +x
           sudo du -sh /* 2>/dev/null
+          sudo du -sh /usr/* 2>/dev/null
+          sudo du -sh /Applications/* 2>/dev/null
           brew install findutils
+          set +x
           brew list --formula | xargs -n1 -P8 -I {} \
             sh -c "brew info {} | egrep '[0-9]* files, ' | sed 's/^.*[0-9]* files, \(.*\)).*$/{} \1/'" | \
             sort -h -r -k2 - | column -t | grep MB | sort -k2 -g
