--- a/.github/workflows/virt-check.yml
+++ b/.github/workflows/virt-check.yml
@@ -62,13 +62,13 @@ jobs:
           df -h /
           #sudo du -sh /* 2>/dev/null || true
           #sudo du -sh /usr 2>/dev/null || true
-          brew list
-          df -h /
-          sudo rm -rf Applications/{Firefox,Google Chrome}.app
           df -h /
           brew install findutils
           set +x
           brew list --formula | xargs -n1 -P8 -I {} \
+            sh -c "brew info {} | egrep '[0-9]* files, ' | sed 's/^.*[0-9]* files, \(.*\)).*$/{} \1/'" | \
+            sort -h -r -k2 - | column -t | grep MB | sort -k2 -g
+          brew list --casks | xargs -n1 -P8 -I {} \
             sh -c "brew info {} | egrep '[0-9]* files, ' | sed 's/^.*[0-9]* files, \(.*\)).*$/{} \1/'" | \
             sort -h -r -k2 - | column -t | grep MB | sort -k2 -g
 
