--- a/.github/workflows/virt-check.yml
+++ b/.github/workflows/virt-check.yml
@@ -61,9 +61,9 @@ jobs:
           df -h /
           brew uninstall --cask chromedriver firefox google-chrome julia microsoft-auto-update microsoft-edge powershell r session-manager-plugin soundflower
           df -h /
-          sudo du -sh / 2>/dev/null || true
-          sudo du -sh /usr 2>/dev/null || true
-          sudo du -sh /Users 2>/dev/null || true
+          sudo du -sh /* 2>/dev/null || true
+          sudo du -sh /usr/* 2>/dev/null || true
+          sudo du -sh /Users/* 2>/dev/null || true
           df -h /
           brew cleanup -s
           df -h /
