--- a/.github/workflows/virt-check.yml
+++ b/.github/workflows/virt-check.yml
@@ -60,12 +60,9 @@ jobs:
           brew uninstall --formula ant aws-sam-cli aspell azure-cli cmake gcc gcc@8 gcc@9 gradle helm icu4c maven mongodb-community mongodb-database-tools node@14 openjdk php postgresql python@3.8 selenium-server-standalone
           df -h /
           brew uninstall --cask chromedriver firefox google-chrome julia microsoft-auto-update microsoft-edge powershell r session-manager-plugin soundflower
+          # sudo du -sh /* 2>/dev/null || true
           df -h /
-          sudo du -sh /* 2>/dev/null || true
-          sudo du -sh /usr/local/Cellar/* 2>/dev/null || true
-          sudo du -sh /Users/runner/hostedtoolcache/* || true
-          sudo du -sh /Users/runner/Library/* || true
-          sudo du -sh /Users/runner/* 2>/dev/null || true
+          rm -rf /Users/runner/hostedtoolcache/
           df -h /
           brew cleanup -s
           df -h /
